<resources>
    <string name="app_name">DEEPITM</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="via_email">Via Email</string>
    <string name="via_phone">Via Phone Number</string>
    <string name="phone_number">Phone Number</string>

    <string name="overview">OVERVIEW</string>
    <string name="discovery">DISCOVERY</string>
    <string name="solutions">SOLUTIONS</string>
    <string name="account">ACCOUNT</string>
    <string name="title_vfcode">Verify Phone Number</string>
    <string name="send_verification">Send Verification Code</string>
    <string name="resend_verification">Resend Verification Code</string>
    <string name="send_verification_tip">Verification code has been sent</string>
    <string name="time_sec_count">%1$d Seconds to resend</string>
    <string name="submit">Submit</string>
    <string name="email_reset_password_tip">To reset your password,enter your e-mail address you use to sign in</string>
    <string name="title_reset">Reset Password</string>

    <string name="collection">Collection</string>
    <string name="quickaction">Quick Action</string>
    <string name="call">Call</string>
    <string name="title_notice">Notifications</string>

    <string name="warning">Warning</string>
    <string name="notice">Notice</string>
    <string name="messages">Messages</string>
    <string name="reply">Reply</string>
    <string name="time_date">HH:mm MM DD</string>
    <string name="subject">High Broadband Utilization</string>
    <string name="content">Dear ITM, please note the Tism ShaTusi Store\'s Broadband Utilization reached 85%</string>
    <string name="default_name">Benny Lau</string>
    <string name="title_chat">Chat</string>
    <string name="preference_private">%1$d %2$s you follow</string>
    <string-array name="critical">
        <item>"By 24H"</item>
        <item>"By Week"</item>
        <item>"By Month"</item>
        <item>"By Year"</item>
    </string-array>

    <string-array name="discovery">
        <item>@string/popular</item>
        <item>@string/industry</item>
        <item>@string/products</item>
        <item>@string/forum</item>
    </string-array>
    <string-array name="as">
        <item>"Logistics"</item>
        <item>"Retail"</item>
        <item>"Financial Services"</item>
        <item>"Manufacture"</item>
        <item>"Sport &amp; Entertainment"</item>
        <item>"Startups"</item>
        <item>"Small Business"</item>
        <item>"Enterprise"</item>
        <item>"Engrgy &amp; Utilities"</item>
    </string-array>
    <string-array name="looking_for">
        <item>"Logistics"</item>
        <item>"Retail"</item>
        <item>"Financial Services"</item>
        <item>"Manufacture"</item>
        <item>"Sport &amp; Entertainment"</item>
        <item>"Startups"</item>
        <item>"Small Business"</item>
        <item>"Enterprise"</item>
        <item>"Engrgy &amp; Utilities"</item>
    </string-array>
    <string-array name="pop">
        <item>@string/pop_1</item>
        <item>@string/pop_2</item>
        <item>@string/pop_3</item>
        <item>@string/pop_4</item>
        <item>@string/pop_5</item>
        <item>@string/pop_6</item>
        <item>@string/pop_7</item>
        <item>@string/pop_8</item>
        <item>@string/pop_9</item>
    </string-array>
    <string name="popular">Popular</string>
    <string name="industry">Industry</string>
    <string name="products">Products</string>
    <string name="forum">Forum</string>
    <string name="spinner_up">As</string>
    <string name="spinner_dn">I\'m Looking For</string>
    <string name="offerings">Offerings</string>
    <string name="favourites">Favourites</string>
    <string name="contacthkt">Contact HKT</string>
    <string name="language">Language</string>
    <string name="title_drilldown">HARBOUR CITY STORE</string>
    <string name="high_warn">High Broadband Utilization</string>

    <!--<string name="google_maps_key">AIzaSyC_8LX9dOPg60UEHZHxQGbshdXnK68r6Po</string>-->
    <string name="recommend">RECOMMENDATIONS</string>
    <string name="buy">BUY</string>
    <string name="quick_fix">QUICK FIX</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="net_error">NET ERROR</string>

    <string name="pop_1">"Logistics"</string>
    <string name="pop_2">"Retail"</string>
    <string name="pop_3">"Financial Services"</string>
    <string name="pop_4">"Manufacture"</string>
    <string name="pop_5">"Sport &amp; Entertainment"</string>
    <string name="pop_6">"Startups"</string>
    <string name="pop_7">"Small Business"</string>
    <string name="pop_8">"Enterprise"</string>
    <string name="pop_9">"Engrgy &amp; Utilities"</string>
</resources>
