<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="wrap_content">

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/lighter_gray"/>

    <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            app:alignItems="stretch"
            app:flexDirection="row"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            app:justifyContent="flex_start"
            app:alignContent="stretch">

        <TextView
                android:id="@+id/item_1"
                android:text="@string/pop_1"
                style="@style/pop_item"
                />

        <TextView
                android:text="@string/pop_2"
                android:id="@+id/item_2"
                style="@style/pop_item"/>

        <TextView
                android:text="@string/pop_3"
                android:id="@+id/item_3"
                style="@style/pop_item"/>

        <TextView
                android:text="@string/pop_4"
                android:id="@+id/item_4"
                style="@style/pop_item"/>

        <TextView
                android:id="@+id/item_5"
                android:text="@string/pop_5"
                style="@style/pop_item"/>

        <TextView
                android:id="@+id/item_6"
                android:text="@string/pop_6"
                style="@style/pop_item"/>

        <TextView
                android:id="@+id/item_7"
                android:text="@string/pop_7"
                style="@style/pop_item"/>

        <TextView
                android:id="@+id/item_8"
                android:text="@string/pop_8"
                style="@style/pop_item"/>

        <TextView
                android:id="@+id/item_9"
                android:text="@string/pop_9"
                style="@style/pop_item"/>

    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>