<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="8dp"
        xmlns:bar="http://schemas.android.com/apk/res-auto"
        bar:cardBackgroundColor="@color/white"
        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:background="@color/transparent"


                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:text="@string/quick_fix"
                android:textColor="@color/white"
                android:gravity="center_vertical"

                android:paddingLeft="30dp"
                android:textSize="18sp"
                android:background="@color/blue_btn"
                android:layout_height="50dp"/>

        <TextView
                android:layout_width="match_parent"
                android:id="@+id/tv_up"
                android:text="@string/content"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:background="@color/transparent"
                android:textColor="@color/blue_btn"
                android:text="@string/learn_more"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/tv_pay"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/time_date"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/tv_buy"
                    android:textColor="@color/blue_btn"
                    android:textSize="16sp"
                    android:gravity="center_vertical|right"
                    android:paddingRight="30dp"
                    android:background="@color/transparent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/buy"
                    android:layout_height="wrap_content"/>


        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>