<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        android:layout_margin="6dp"
        app:cardBackgroundColor="@color/transparent">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:text="@string/time_date"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"/>

        <TextView
                android:background="@color/white"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/subject"
                android:drawableLeft="@drawable/ic_point"
                android:drawablePadding="14dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:maxLines="1"
                android:id="@+id/subject"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="match_parent"
                android:background="@color/lighter_gray"
                android:layout_height="1dp"/>

        <TextView
                android:background="@color/white"
                android:text="@string/content"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:maxLines="3"
                android:id="@+id/content"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.v7.widget.CardView>