<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        android:layout_margin="6dp"
        app:cardBackgroundColor="@color/transparent">

    <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <org.paul.lib.widget.RoundImage
                android:id="@+id/img_head"
                android:layout_width="50dp"
                android:src="@drawable/default_head"
                android:layout_gravity="top|right"
                android:layout_height="50dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/default_name"
                    android:padding="4dp"
                    android:id="@+id/name"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:padding="4dp"
                    android:text="@string/time_date"
                    android:id="@+id/time"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="match_parent"
                    android:maxLines="3"
                    android:textSize="16sp"
                    android:text="@string/content"
                    android:padding="4dp"
                    android:id="@+id/content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>