<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/bg_act"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_height="70dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_height="90dp">

            <org.paul.lib.widget.RoundImage
                    android:layout_width="40dp"
                    android:src="@drawable/default_head"
                    android:layout_gravity="center_vertical"
                    android:layout_height="40dp"/>

            <LinearLayout
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/name"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:gravity="bottom|left"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:text="@string/default_name"
                        android:layout_height="0dip"/>

                <TextView
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:id="@+id/email"
                        android:textSize="14sp"
                        android:text="@string/default_name"
                        android:gravity="top|left"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="0dip"/>

            </LinearLayout>

            <ImageView
                    android:layout_gravity="center_vertical|right"
                    android:layout_width="30dp"
                    app:srcCompat="@drawable/ic_right_arrow"
                    android:layout_height="30dp"/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent">

        <LinearLayout
                android:background="@color/white"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

            <TextView
                    android:textSize="18sp"
                    android:text="@string/offerings"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:layout_height="70dp"/>

            <View
                    android:layout_width="match_parent"
                    android:background="@color/lighter_gray"
                    android:layout_height="1dp"/>

            <TextView
                    android:textSize="18sp"
                    android:text="@string/favourites"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:layout_height="70dp"/>

            <View
                    android:layout_width="match_parent"
                    android:background="@color/lighter_gray"
                    android:layout_height="1dp"/>

            <TextView
                    android:textSize="18sp"
                    android:text="@string/contacthkt"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:layout_height="70dp"/>

            <View
                    android:layout_width="match_parent"
                    android:background="@color/lighter_gray"
                    android:layout_height="1dp"/>

            <TextView
                    android:textSize="18sp"
                    android:text="@string/language"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:layout_height="70dp"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>