<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_act"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
                android:background="@drawable/gradient_top"
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:titleTextColor="@color/black"
                app:title="@string/title_vfcode"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

    </android.support.design.widget.AppBarLayout>


    <TextView
            android:id="@+id/tv_phone_number"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="18sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    <TextView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="14sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/send_verification_tip"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    <com.huawei.deepitm.widget.VerificationCodeView
            android:id="@+id/verify_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:vcv_et_bg="@drawable/et_login_code"
            app:vcv_et_cursor="@drawable/et_cursor"
            app:vcv_et_inputType="number"
            app:vcv_et_text_color="@android:color/black"
            app:vcv_et_text_size="6sp"/>

    <TextView
            android:id="@+id/tv_count_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/blue_btn"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:clickable="false"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="14sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"/>

    <Button
            android:id="@+id/btn_submit"
            android:onClick="submit"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/input_padding"
            android:layout_marginEnd="@dimen/input_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/slct_btn"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"/>
</LinearLayout>