<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="8dp"
        xmlns:bar="http://schemas.android.com/apk/res-auto"
        bar:cardBackgroundColor="@color/white"

        >

    <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="match_parent"
                android:id="@+id/img"
                android:src="@drawable/broadband"
                android:scaleType="centerCrop"
                android:layout_height="180dip"/>


        <TextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:text="@string/subject"
                android:background="@color/white"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:id="@+id/tv_up"
                android:layout_weight="2"
                android:layout_height="0dp"/>

        <TextView
                android:layout_width="match_parent"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textSize="14sp"
                android:text="@string/content"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:id="@+id/tv_dn"
                android:maxLines="2"
                android:layout_weight="3"
                android:layout_height="0dp"/>

        <LinearLayout
                android:paddingTop="6dp"
                android:paddingLeft="20dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/tv_1"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:text="@string/subject"
                    android:textSize="16sp"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:src="@drawable/ic_heart"
                    android:layout_height="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_2"
                    android:background="@color/white"
                    android:text="@string/time_date"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingLeft="6dp"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:src="@drawable/ic_flag"
                    android:layout_height="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_3"
                    android:text="@string/time_date"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingLeft="6dp"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:src="@drawable/ic_eye"
                    android:layout_height="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_4"
                    android:text="@string/time_date"
                    android:layout_weight="1"
                    android:paddingLeft="6dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="40dp"
                    android:src="@drawable/ic_point3"
                    android:id="@+id/img_menu"
                    android:layout_marginRight="20dp"
                    android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <include
            layout="@layout/item_head_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

</android.support.v7.widget.CardView>